--- a/src/main/webapp/template/menu.xhtml
+++ b/src/main/webapp/template/menu.xhtml
@@ -12,7 +12,7 @@
             <p:menuitem value="Home" url="/pages/accueil.xhtml" styleClass="#{view.viewId.contains('accueil') ? 'active' : ''}"/>
             <p:submenu label="Courses">
                 <p:menuitem value="Search courses" url="/pages/searchFormations.xhtml" styleClass="#{view.viewId.contains('searchFormations') ? 'active' : ''}"/>
-                <p:menuitem value="Create new courses" url="/pages/createFormation.xhtml" styleClass="#{view.viewId.contains('createFormation') ? 'active' : ''}"/>
+                <p:menuitem value="Create new course" url="/pages/createFormation.xhtml" styleClass="#{view.viewId.contains('createFormation') ? 'active' : ''}"/>
             </p:submenu>
         </p:menu>
     </h:form>
