Course session search page improvements + other modifs - it's now possible to register a client to course session. - renaming some classes - deleting some classes - deleting some methods - mapping redone

--- a/src/main/webapp/resources/css/searchFormations.css
+++ b/src/main/webapp/resources/css/searchFormations.css
@@ -1,3 +1,23 @@
+.formationDTHeader {
+    text-align:left;
+}
+
 .dialog {
     width: 80% !important;
+}
+
+.clientsDT {
+    margin-top: 20px;
+}
+
+.registerPanel {
+    margin-top: 30px;
+}
+
+.registerButton {
+    margin-top: 10px;
+}
+
+.progressBarClientsDetails {
+    width: 250px;
 }
