Login system : - login on home page - rights management (admin)

--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -23,7 +23,7 @@
                     KRIFA Khaled - RIFFLART Florian
                 </p:layoutUnit>
 
-                <p:layoutUnit position="west" minSize="295" collapsible="false" gutter="0">
+                <p:layoutUnit position="west" minSize="295" collapsible="false" gutter="0" rendered="#{homeModel.logged}">
                     <ui:include src="menu.xhtml" />
                 </p:layoutUnit>
 
