--- a/src/main/webapp/template/menu.xhtml
+++ b/src/main/webapp/template/menu.xhtml
@@ -9,7 +9,7 @@
 
     <h:form>
         <p:menu toggleable="true" class="menu">
-            <p:menuitem value="Home" url="/pages/accueil.xhtml" styleClass="#{view.viewId.contains('accueil') ? 'active' : ''}"/>
+            <p:menuitem value="Home" url="/pages/home.xhtml" styleClass="#{view.viewId.contains('home') ? 'active' : ''}"/>
             <p:submenu label="Courses">
                 <p:menuitem value="Search courses" url="/pages/searchFormations.xhtml" styleClass="#{view.viewId.contains('searchFormations') ? 'active' : ''}"/>
                 <p:menuitem value="Create new course" url="/pages/createFormation.xhtml" styleClass="#{view.viewId.contains('createFormation') ? 'active' : ''}"/>
