--- a/src/main/webapp/template/menu.xhtml
+++ b/src/main/webapp/template/menu.xhtml
@@ -7,12 +7,12 @@
 
     <h:outputStylesheet library="css" name="menu.css" />
 
-    <h:form>
-        <p:menu toggleable="true" class="menu">
+    <h:form id="menuForm">
+        <p:menu toggleable="true" styleClass="menu">
             <p:menuitem value="Home" url="/pages/home.xhtml" styleClass="#{view.viewId.contains('home') ? 'active' : ''}"/>
             <p:submenu label="Courses">
-                <p:menuitem value="Search courses" url="/pages/searchFormations.xhtml" styleClass="#{view.viewId.contains('searchFormations') ? 'active' : ''}"/>
-                <p:menuitem value="Create new course" url="/pages/createFormation.xhtml" styleClass="#{view.viewId.contains('createFormation') ? 'active' : ''}"/>
+                <p:menuitem value="Search courses" url="/pages/searchFormations.xhtml" styleClass="#{view.viewId.contains('searchFormations') ? 'active' : ''}" disabled="#{not homeModel.logged}"/>
+                <p:menuitem value="Create new course" url="/pages/createFormation.xhtml" styleClass="#{view.viewId.contains('createFormation') ? 'active' : ''}" disabled="#{not homeModel.logged}"/>
             </p:submenu>
         </p:menu>
     </h:form>
