--- a/src/main/webapp/template/menu.xhtml
+++ b/src/main/webapp/template/menu.xhtml
@@ -4,16 +4,16 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
-
     <h:outputStylesheet library="css" name="menu.css" />
 
     <h:form id="menuForm">
         <p:menu toggleable="true" styleClass="menu">
             <p:menuitem value="Home" url="/pages/home.xhtml" styleClass="#{view.viewId.contains('home') ? 'active' : ''}"/>
             <p:submenu label="Courses">
-                <p:menuitem value="Search courses" url="/pages/searchFormations.xhtml" styleClass="#{view.viewId.contains('searchFormations') ? 'active' : ''}" disabled="#{not homeModel.logged}"/>
-                <p:menuitem value="Create new course" url="/pages/createFormation.xhtml" styleClass="#{view.viewId.contains('createFormation') ? 'active' : ''}" disabled="#{not homeModel.logged}"/>
+                <p:menuitem value="Search courses" url="/pages/searchCourseSessions.xhtml" styleClass="#{view.viewId.contains('searchCourseSessions') ? 'active' : ''}" disabled="#{not templateModel.logged}"/>
+                <p:menuitem value="Create new course" url="/pages/createCourse.xhtml" styleClass="#{view.viewId.contains('createCourse') ? 'active' : ''}" disabled="#{not templateModel.logged}"/>
             </p:submenu>
         </p:menu>
     </h:form>
+
 </ui:composition>
